fix arrow to make it visible

--- a/css/main.css
+++ b/css/main.css
@@ -815,4 +815,5 @@ Contact Us
   position: fixed;
   right: 25px;
   z-index: 9;
+  color:#1ea78d;
 }
